force-app/main/default/objects/Lot__c/Lot__c.object-meta.xml
<CustomObject>
    <label>Lot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>