force-app/main/default/objects/Lot__c/fields/ExtKey__c.field-meta.xml
<CustomField>
    <fullName>ExtKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ExtKey</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>