force-app/main/default/objects/Lot__c/fields/LinkedWeekPlan__c.field-meta.xml
<CustomField>
    <fullName>LinkedWeekPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Week Plan</label>
    <referenceTo>OrderItemWeekPlans__c</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots_WeekPlan</relationshipName>
    <type>Lookup</type>
</CustomField>