force-app/main/default/objects/Lot__c/fields/LotDate__c.field-meta.xml
<CustomField>
    <fullName>LotDate__c</fullName>
    <label>LotDate</label>
    <type>Date</type>
</CustomField>