force-app/main/default/objects/Lot__c/fields/LotQty_t__c.field-meta.xml
<CustomField>
    <fullName>LotQty_t__c</fullName>
    <label>LotQty_t</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>