force-app/main/default/objects/Lot__c/fields/LotType__c.field-meta.xml
<CustomField>
    <fullName>LotType__c</fullName>
    <label>LotType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produced</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>