force-app/main/default/objects/Lot__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots</relationshipName>
    <type>Lookup</type>
</CustomField>