force-app/main/default/objects/Lot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LotDate__c</columns>
    <columns>LotQty_t__c</columns>
    <columns>LotType__c</columns>
    <columns>ProdPlanType__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>ProdWeek__c</columns>
    <columns>ITENumber__c</columns>
    <columns>OrderItem__c</columns>
    <columns>ExtKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>