force-app/main/default/objects/Lot__c/listViews/Prod.listView-meta.xml
<ListView>
    <fullName>Prod</fullName>
    <columns>LotDate__c</columns>
    <columns>LotQty_t__c</columns>
    <columns>LotType__c</columns>
    <columns>ProdPlanType__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>ProdWeek__c</columns>
    <columns>ITENumber__c</columns>
    <columns>OrderItem__c</columns>
    <columns>ExtKey__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LotType__c</field>
        <operation>equals</operation>
        <value>Produced</value>
    </filters>
    <label>Lots (production)</label>
</ListView>